[gd_scene load_steps=14 format=2]

[ext_resource path="res://Fonts/orange juice 2.0.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://BotonSeleccionado.tres" type="StyleBox" id=2]
[ext_resource path="res://Imagenes/56 (Personalizado).png" type="Texture" id=3]
[ext_resource path="res://Imagenes/Word_2013_23473.png" type="Texture" id=4]
[ext_resource path="res://Imagenes/YouTube_23392.png" type="Texture" id=5]
[ext_resource path="res://Imagenes/website_web_12218.png" type="Texture" id=6]
[ext_resource path="res://Imagenes/file_type_pdf_icon_130274.png" type="Texture" id=7]
[ext_resource path="res://MaterialDeRepaso.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 90
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 1 )

[node name="MaterialDeRepaso" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.682353, 0.592157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" type="Label" parent="."]
margin_left = 268.527
margin_top = 12.7279
margin_right = 1001.53
margin_bottom = 103.728
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Material de Repaso"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 970.811
margin_top = 318.263
margin_right = 1270.81
margin_bottom = 718.263
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texto" type="Label" parent="."]
margin_left = 47.7621
margin_top = 105.0
margin_right = 1230.76
margin_bottom = 240.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Recordá que tenés a tu disposición todo el material online de la cátedra, tales como el video tutorial del sistema CPPS para buscar más ejemplos de diferentes productores agropecuarios, como ejercicos para practicar y el apunte teórico de esta unidad."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Regresar" type="Button" parent="."]
margin_left = 311.413
margin_top = 550.713
margin_right = 975.413
margin_bottom = 702.713
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Regresar"]
margin_left = 21.0397
margin_top = 6.30237
margin_right = 651.04
margin_bottom = 151.302
custom_fonts/font = SubResource( 4 )
text = "Regresar a Selección 
de Actividad"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PDF" type="Button" parent="."]
margin_left = 32.0
margin_top = 297.0
margin_right = 400.0
margin_bottom = 401.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PDF"]
margin_left = 39.0
margin_top = 3.0
margin_right = 349.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 5 )
text = "Apunte Teórico"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="PDF"]
margin_top = 15.0
margin_right = 72.0
margin_bottom = 87.0
texture = ExtResource( 7 )

[node name="CPPS" type="Button" parent="."]
margin_left = 416.0
margin_top = 424.0
margin_right = 864.0
margin_bottom = 527.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CPPS"]
margin_left = 96.0
margin_top = 16.0
margin_right = 379.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 5 )
text = "CPPS"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CPPS"]
margin_left = 16.0
margin_top = 8.0
margin_right = 88.0
margin_bottom = 80.0
texture = ExtResource( 6 )

[node name="CPPSVideo" type="Button" parent="."]
margin_left = 416.0
margin_top = 296.0
margin_right = 864.0
margin_bottom = 400.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CPPSVideo"]
margin_left = 54.0
margin_top = 16.0
margin_right = 437.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 5 )
text = "Tutorial CPPS"
align = 1
valign = 1
autowrap = true

[node name="TextureRect" type="TextureRect" parent="CPPSVideo"]
margin_left = 16.0
margin_top = 16.0
margin_right = 88.0
margin_bottom = 88.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ejercicios" type="Button" parent="."]
margin_left = 32.0
margin_top = 424.0
margin_right = 400.0
margin_bottom = 528.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Ejercicios"]
margin_left = 120.796
margin_top = 11.009
margin_right = 329.796
margin_bottom = 93.009
custom_fonts/font = SubResource( 5 )
text = "Ejercicios"
align = 1
valign = 1
autowrap = true

[node name="TextureRect" type="TextureRect" parent="Ejercicios"]
margin_left = 16.0
margin_top = 8.0
margin_right = 88.0
margin_bottom = 80.0
texture = ExtResource( 4 )

[connection signal="pressed" from="Regresar" to="." method="_on_Regresar_pressed"]
[connection signal="pressed" from="PDF" to="." method="_on_PDF_pressed"]
[connection signal="pressed" from="CPPS" to="." method="_on_CPPS_pressed"]
[connection signal="pressed" from="CPPSVideo" to="." method="_on_CPPSVideo_pressed"]
[connection signal="pressed" from="Ejercicios" to="." method="_on_Ejercicios_pressed"]
